update to Java 17, fix field list for MarcContentHandler